--- a/static/styles/catalog.css
+++ b/static/styles/catalog.css
@@ -8,13 +8,17 @@ a > small,
   margin-bottom: 10px;
 }
 
+.checkbox-inline {
+  padding-bottom: 3px;
+}
+
 .external_links {
   display: block;
   margin-bottom: 5px;
 }
 
 .filter-input {
-  width: 100%;
+  width: 300px;
   margin-bottom: 20px;
 }
 
