--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,8 +1,19 @@
-.center {
-  width: 100%;
+.image-block {
+  width: 384px;
+  height: 150px;
   margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-.logo {
+.image-block > img {
+  float: left;
   height: 150px;
+}
+
+.image-block > img:nth-child(1) {
+  margin-right: 10px
+}
+
+.image-block > img:nth-child(2) {
+  margin-left: 10px
 }
