--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,9 @@
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid">
-    <div class="row-fluid">
-      <img class="logo center-block" src="{{ url_for('static', filename='images/geolotse.svg') }}" />
+    <div class="row-fluid image-block">
+      <img src="{{ url_for('static', filename='images/child.svg') }}" />
+      <img src="{{ url_for('static', filename='images/parent.svg') }}" />
     </div>
     <div class="row-fluid">
       <div class="text-center">
