--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -43,6 +43,49 @@
           </div>
           <div id="{{ group.name }}" class="panel-collapse collapse">
             <div class="panel-body">
+              {% if group.name == 'api' %}
+                <div class="list-group">
+                  {% for api_link in api_links %}
+                    <a href="{{ api_link.link }}" target="_blank" class="list-group-item list-group-item-action">
+                      <span class="glyphicon glyphicon-{% if api_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ api_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                      <span class="glyphicon glyphicon-eye-{% if api_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if api_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                      {{ api_link.title }}
+                    </a>
+                  {% endfor %}
+                </div>
+              {% endif %}
+              {% if group.name == 'application' %}
+                <span class="glyphicon glyphicon-filter" aria-hidden="true"></span> <input class="filter-input" id="application-filter-input" placeholder="{{ _('Freitextfilter') }}…" type="text" />
+                <div class="panel-group" id="application-accordion">
+                  {% for application_link in application_links %}
+                    {% if application_link.parent_id == application_link.id %}
+                      <div class="panel panel-info">
+                        <div class="panel-heading">
+                          <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#application-{{ application_link.id }}">
+                              {% set typifier_tag = application_link.id|get_link_typifier_tag() %}
+                              <span class="full-width">{% if application_link.logo != None %}<img src="{{url_for('static', filename='images/') }}{{ application_link.logo }}" class="application-logo" /> {% endif %}{{ typifier_tag.title }}</span>
+                            </a>
+                          </h4>
+                        </div>
+                        <div id="application-{{ application_link.id }}" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            {% for child in application_link.id|get_link_children(True) %}
+                              <div class="application-child">
+                                <a href="{{ child.link }}" target="_blank">
+                                  <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
+                                  <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                                  {{ child.title }}
+                                </a>
+                              </div>
+                            {% endfor %}
+                          </div>
+                        </div>
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+                </div>
+              {% endif %}
               {% if group.name == 'documentation' %}
                 <div class="list-group">
                   {% for documentation_link in documentation_links %}
@@ -80,6 +123,21 @@
                   </div>
                 {% endfor %}
               {% endif %}
+              {% if group.name == 'helper' %}
+                <span class="glyphicon glyphicon-filter" aria-hidden="true"></span> <input class="filter-input" id="helper-filter-input" placeholder="{{ _('Freitextfilter') }}…" type="text" />
+                {% for helper_tag in helper_tags %}
+                  <h5{% if loop.first %} class="first"{% endif %}>{{ helper_tag.title }}</h5>
+                  <div class="helper-list-group">
+                    {% for helper_link in helper_tag.id|get_tag_links() %}
+                      <a href="{{ helper_link.link }}" target="_blank" class="list-group-item list-group-item-action">
+                        <span class="glyphicon glyphicon-{% if helper_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ helper_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                        <span class="glyphicon glyphicon-eye-{% if helper_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if helper_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                        {{ helper_link.title }}
+                      </a>
+                    {% endfor %}
+                  </div>
+                {% endfor %}
+              {% endif %}
               {% if group.name == 'geoservice' %}
                 <div class="checkboxes" id="geoservice-checkboxes">
                   <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
@@ -99,9 +157,9 @@
                             <a data-toggle="collapse" href="#geoservice-{{ geoservice_link.id }}">
                               <span class="full-width">{{ geoservice_link.title }}</span>
                               <small>
-                              {% for typifier_tag in geoservice_link.id|get_link_children_typifier_tags(True) %}
-                                <span class="full-width geoservice-typifier-tag">{{ typifier_tag }}</span>
-                              {% endfor %}
+                                {% for typifier_tag in geoservice_link.id|get_link_children_typifier_tags(True) %}
+                                  <span class="full-width geoservice-typifier-tag">{{ typifier_tag }}</span>
+                                {% endfor %}
                               </small>
                             </a>
                           </h4>
@@ -116,6 +174,27 @@
                                     {{ tag }}{% if not loop.last %} •{% endif %}
                                 {% endfor %}
                               </span>
+                            {% endif %}
+                            {% set geoportal_sublink = geoservice_link.id|get_link_geoportal_sublink() %}
+                            {% set geoportal_mobile_sublink = geoservice_link.id|get_link_geoportal_mobile_sublink() %}
+                            {% if geoportal_sublink != None or geoportal_mobile_sublink != None %}
+                              <h5><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> {{ _('Vorschau') }}</h5>
+                              {% if geoportal_sublink != None %}
+                                <span class="full-width"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> {{ _('Desktop') }}</span>
+                                <a href="{{ geoportal_sublink.link }}" target="_blank">
+                                  <span class="glyphicon glyphicon-{% if geoportal_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ geoportal_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                  <span class="glyphicon glyphicon-eye-{% if geoportal_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                                  {{ geoportal_sublink.title }}
+                                </a>
+                              {% endif %}
+                              {% if geoportal_mobile_sublink != None %}
+                                <span class="full-width"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> {{ _('mobil') }}</span>
+                                <a href="{{ geoportal_mobile_sublink.link }}" target="_blank">
+                                  <span class="glyphicon glyphicon-{% if geoportal_mobile_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ geoportal_mobile_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                  <span class="glyphicon glyphicon-eye-{% if geoportal_mobile_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_mobile_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                                  {{ geoportal_mobile_sublink.title }}
+                                </a>
+                              {% endif %}
                             {% endif %}
                             {% for child in geoservice_link.id|get_link_children(True) %}
                               <div class="geoservice-child">
