--- a/templates/index.html
+++ b/templates/index.html
@@ -25,13 +25,32 @@
   {% include 'navbar.html' %}
   <div class="container-fluid">
     <div class="row-fluid image-block">
-      <img src="{{ url_for('static', filename='images/child.svg') }}" />
-      <img src="{{ url_for('static', filename='images/parent.svg') }}" />
+      <a href="{{ url_for('index', lang_code = g.current_lang) }}">
+        <img src="{{ url_for('static', filename='images/child.svg') }}" />
+      </a>
+      <a href="{{ config.PARENT }}" target="_blank">
+        <img src="{{ url_for('static', filename='images/parent.svg') }}" />
+      </a>
     </div>
-    <div class="row-fluid">
-      <div class="text-center">
-        <h1>{{ config.TITLE }}</h1>
-        <p>{{ _('Einstiegsmöglichkeit in die Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock und Schnittstelle aller Anwendungen mit Raumbezug des Kataster-, Vermessungs- und Liegenschaftsamtes der Hanse- und Universitätsstadt Rostock') }}</p>
+    <div class="row-fluid text-center center-block">
+      <h1>{{ config.TITLE }}</h1>
+      <p>{{ _('Einstiegsmöglichkeit in die Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock und Schnittstelle aller Anwendungen mit Raumbezug des Kataster-, Vermessungs- und Liegenschaftsamtes der Hanse- und Universitätsstadt Rostock') }}</p>
+    </div>
+    <div class="row-fluid text-center">
+      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> <input class="form-control" id="search-input" placeholder="{{ _('Suche') }}…" type="text" />
+    </div>
+    <div class="row-fluid text-center center-block">
+      <div class="col-md-6">
+        <a href="{{ url_for('situations', lang_code = g.current_lang) }}">
+          <span class="glyphicon mega-glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+          <p class="text-justify">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+        </a>
+      </div>
+      <div class="col-md-6">
+        <a href="{{ url_for('catalog', lang_code = g.current_lang) }}">
+          <span class="glyphicon mega-glyphicon glyphicon-list" aria-hidden="true"></span>
+          <p class="text-justify">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+        </a>
       </div>
     </div>
   </div>
