--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% set navbar_right = [
-  ('catalog', 'Katalog'),
-  ('situations', 'Lebenslagen')
+  ('situations', 'Lebenslagen'),
+  ('catalog', 'Katalog')
 ] %}
 
 <nav class="navbar navbar-default navbar-fixed-top">
