--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,11 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% endblock %}
 
+{% block scripts %}
+  {{super()}}
+  <script type="application/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
+{% endblock %}
+
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid">
@@ -37,7 +42,10 @@
       <p>{{ _('Einstiegsmöglichkeit in die Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock und Schnittstelle aller Anwendungen mit Raumbezug des Kataster-, Vermessungs- und Liegenschaftsamtes der Hanse- und Universitätsstadt Rostock') }}</p>
     </div>
     <div class="row-fluid text-center">
-      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> <input class="form-control" id="search-input" placeholder="{{ _('Suche') }}…" type="text" />
+      <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Lebenslagen und Katalog') }}…" type="search" />
+      <span id="clear-search-input" class="glyphicon glyphicon-remove-circle"></span>
+      <div id="results"></div>
     </div>
     <div class="row-fluid text-center center-block">
       <div class="col-md-6">
@@ -49,7 +57,7 @@
       <div class="col-md-6">
         <a href="{{ url_for('catalog', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-list" aria-hidden="true"></span>
-          <p class="text-justify">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+          <p class="text-justify"><span class="bold">{{ _('Katalog') }}</span> – {{ _('Stöbern Sie in der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock anhand übersichtlich geordneter, filterbarer Listen.') }}</p>
         </a>
       </div>
     </div>
