--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,10 @@
     </div>
     <div class="row-fluid text-center">
       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Lebenslagen und Katalog') }}…" type="search" />
+      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Lebenslagen, Anwendungen, Geodatendiensten') }}…" type="search" />
       <span id="clear-search-input" class="glyphicon glyphicon-remove-circle"></span>
       <div id="results"></div>
+      <div id="results-pagination"></div>
     </div>
     <div class="row-fluid text-center center-block">
       <div class="col-md-6">
