--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,11 @@
   {% include 'navbar.html' %}
   <div class="container-fluid">
     <div class="row-fluid image-block">
-      <a href="{{ url_for('index', lang_code = g.current_lang) }}">
-        <img src="{{ url_for('static', filename='images/child.svg') }}" />
+      <a href="#">
+        <img class="first-img" src="{{ url_for('static', filename='images/child.svg') }}" />
       </a>
       <a href="{{ config.PARENT }}" target="_blank">
-        <img src="{{ url_for('static', filename='images/parent.svg') }}" />
+        <img class="last-img" src="{{ url_for('static', filename='images/parent.svg') }}" />
       </a>
     </div>
     <div class="row-fluid text-center center-block">
