--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,14 +11,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ url_for('index', lang_code = g.current_lang) }}">
+      <a class="navbar-brand" {% if active_page and active_page == 'index' %} href="javascript:function() { return false; }" disabled="disabled"{% else %} href="{{ url_for('index', lang_code = g.current_lang) }}"{% endif %}>
         <img src="{{ url_for('static', filename='images/geolotse.svg') }}" />
         {{ config.TITLE }}
       </a>
       <div class="navbar-languages">
         <span class="glyphicon glyphicon-bullhorn"></span>
         {% for key in config.LANGUAGES %}
-          <a {% if g.current_lang == key %}href="#"{% else %}href="{{ url_for(request.endpoint, lang_code = key) }}"{% endif %}>{{ key }}</a>
+          <a {% if g.current_lang == key %}href="javascript:function() { return false; }" disabled="disabled"{% else %}href="{{ url_for(request.endpoint, lang_code = key) }}"{% endif %}>{{ key }}</a>
           {% if not loop.last %}
             |
           {% endif %}
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav navbar-right">
         {% for url, title in navbar_right %}
           <li{% if active_page and url == active_page %} class="active"{% endif %}>
-            <a{% if active_page and url == active_page %} href="#"{% else %} href="{{ url_for(url, lang_code = g.current_lang) }}"{% endif %}>
+            <a{% if active_page and url == active_page %} href="javascript:function() { return false; }" disabled="disabled"{% else %} href="{{ url_for(url, lang_code = g.current_lang) }}"{% endif %}>
               <span class="glyphicon glyphicon-{% if url == 'catalog' %}list{% elif url == 'situations' %}map-marker{% else %}question-sign{% endif %}" aria-hidden="true"></span> {{ _(title|e) }}
             </a>
           </li>
