--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -199,6 +199,7 @@ footer a:hover {
 .tooltip > .tooltip-inner {
   padding: 10px;
   background-color: #006cb7;
+  text-align: left;
 }
 
 .tooltip.right > .tooltip-arrow {
