--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -47,7 +47,7 @@
                 <div class="list-group">
                   {% for api_link in api_links %}
                     <a href="{{ api_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                      <span class="glyphicon glyphicon-{% if api_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ api_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                      <span class="glyphicon glyphicon-{% if api_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if api_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ api_link.reachable_last_check|datetime_l10n('full') }}"></span>
                       <span class="glyphicon glyphicon-eye-{% if api_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if api_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                       {{ api_link.title }}
                     </a>
@@ -72,7 +72,7 @@
                           {% for child in application_link.id|get_parent_link_children(True) %}
                             <div class="application-child">
                               <a href="{{ child.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
                                 <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                 {{ child.title }}
                               </a>
@@ -88,7 +88,7 @@
                 <div class="list-group">
                   {% for documentation_link in documentation_links %}
                     <a href="{{ documentation_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                      <span class="glyphicon glyphicon-{% if documentation_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ documentation_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                      <span class="glyphicon glyphicon-{% if documentation_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if documentation_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ documentation_link.reachable_last_check|datetime_l10n('full') }}"></span>
                       <span class="glyphicon glyphicon-eye-{% if documentation_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if documentation_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                       {{ documentation_link.title }}
                     </a>
@@ -99,7 +99,7 @@
                 <div class="list-group">
                   {% for download_link in download_links %}
                     <a href="{{ download_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                      <span class="glyphicon glyphicon-{% if download_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ download_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                      <span class="glyphicon glyphicon-{% if download_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if download_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ download_link.reachable_last_check|datetime_l10n('full') }}"></span>
                       <span class="glyphicon glyphicon-eye-{% if download_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if download_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                       {{ download_link.title }}
                     </a>
@@ -118,7 +118,7 @@
                     <div class="external-list-group">
                   {% endif %}
                   <a href="{{ external_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                    <span class="glyphicon glyphicon-{% if external_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ external_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                    <span class="glyphicon glyphicon-{% if external_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if external_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ external_link.reachable_last_check|datetime_l10n('full') }}"></span>
                     <span class="glyphicon glyphicon-eye-{% if external_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if external_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                     {{ external_link.title }}
                   </a>
@@ -131,7 +131,7 @@
                 <div class="list-group">
                   {% for form_link in form_links %}
                     <a href="{{ form_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                      <span class="glyphicon glyphicon-{% if form_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ form_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                      <span class="glyphicon glyphicon-{% if form_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if form_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ form_link.reachable_last_check|datetime_l10n('full') }}"></span>
                       <span class="glyphicon glyphicon-eye-{% if form_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if form_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                       {{ form_link.title }}
                     </a>
@@ -182,7 +182,7 @@
                             {% if geoportal_sublink != None %}
                               <span class="full-width"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> {{ _('Desktop') }}</span>
                               <a href="{{ geoportal_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if geoportal_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ geoportal_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-{% if geoportal_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ geoportal_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
                                 <span class="glyphicon glyphicon-eye-{% if geoportal_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                 {{ geoportal_sublink.title }}
                               </a>
@@ -190,7 +190,7 @@
                             {% if geoportal_mobile_sublink != None %}
                               <span class="full-width"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> {{ _('mobil') }}</span>
                               <a href="{{ geoportal_mobile_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if geoportal_mobile_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ geoportal_mobile_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-{% if geoportal_mobile_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_mobile_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ geoportal_mobile_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
                                 <span class="glyphicon glyphicon-eye-{% if geoportal_mobile_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_mobile_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                 {{ geoportal_mobile_sublink.title }}
                               </a>
@@ -210,7 +210,7 @@
                                 {% if metadata_sublink != None %}
                                   <span class="full-width"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> {{ _('Metadaten') }}</span>
                                   <a href="{{ metadata_sublink.link }}" target="_blank">
-                                    <span class="glyphicon glyphicon-{% if metadata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ metadata_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                    <span class="glyphicon glyphicon-{% if metadata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if metadata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ metadata_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
                                     <span class="glyphicon glyphicon-eye-{% if metadata_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if metadata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                     {{ metadata_sublink.title }}
                                   </a>
@@ -218,7 +218,7 @@
                               {% endif %}
                               <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
                               <a href="{{ child.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
                                 <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                 {{ child.link }}
                               </a>
@@ -249,7 +249,7 @@
                             {% if opendata_sublink != None %}
                               <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
                               <a href="{{ opendata_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if opendata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ opendata_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-{% if opendata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ opendata_sublink.reachable_last_check|datetime_l10n('full') }}"></span>
                                 <span class="glyphicon glyphicon-eye-{% if opendata_sublink.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                                 {{ opendata_sublink.title }}
                               </a>
@@ -273,7 +273,7 @@
                     <div class="helper-list-group">
                   {% endif %}
                   <a href="{{ helper_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                    <span class="glyphicon glyphicon-{% if helper_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ helper_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                    <span class="glyphicon glyphicon-{% if helper_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if helper_link.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ helper_link.reachable_last_check|datetime_l10n('full') }}"></span>
                     <span class="glyphicon glyphicon-eye-{% if helper_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if helper_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
                     {{ helper_link.title }}
                   </a>
