changed the name of a database table field; further extended and improved README.md

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -224,15 +224,15 @@
                               </a>
                             </div>
                           {% endfor %}
-                          {% if geoservice_link.date != None or geoservice_link.authorship_place != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None or geoservice_link.data_link != None %}
+                          {% if geoservice_link.date != None or geoservice_link.authorship_organisation != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None or geoservice_link.data_link != None %}
                             <h5><span class="glyphicon glyphicon-home" aria-hidden="true"></span> {{ _('Datenquelle') }}</h5>
                             {% if geoservice_link.date != None %}
                               <span class="full-width"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> {{ _('Stand') }}</span>
                               <span class="full-width">{{ geoservice_link.date|date_l10n('full') }}</span>
                             {% endif %}
-                            {% if geoservice_link.authorship_place != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ ngettext('Autor', 'Autoren', geoservice_link.authorship_place|length) }}</span>
-                              {% for authorship_place in geoservice_link.authorship_place %}
+                            {% if geoservice_link.authorship_organisation != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None %}
+                              <span class="full-width"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ ngettext('Autor', 'Autoren', geoservice_link.authorship_organisation|length) }}</span>
+                              {% for authorship_organisation in geoservice_link.authorship_organisation %}
                                 <span class="full-width">
                                   {% if geoservice_link.authorship_name[loop.index0] != None %}
                                     {{ geoservice_link.authorship_name[loop.index0] }}
@@ -241,7 +241,7 @@
                                     {% endif %}
                                     •
                                   {% endif %}
-                                  {{ authorship_place }}
+                                  {{ authorship_organisation }}
                                 </span>
                               {% endfor %}
                             {% endif %}
